Crealead 2.1.4 - 2016-05-30
---------------------------
Special release to deploy Gazette feature in production.

Crealead 2.1.3 - / 2016-05-26
-----------------------------
Info meetings list now ordered on Date of meeting instead of Date of publication.

Crealead 2.1.2 - / 2016-05-26
-----------------------------
Previous 2.1.1 hotfix was a mistake and had no effect because bug fix was made on develop branch
before creating the hotfix branch. Consequently, the hotfix branch doesn't contain changed files.
This current new release now contains changes.

Crealead 2.1.1 - / 2016-05-26
-----------------------------
Bugfix: Contrib module views_random_seed used to remove brand random search duplicates.


Crealead 2.1 - 22/05/2016
-------------------------
 * crealead_core and crealead_info_meetings up: Permission to administer registrations et registration settings added to role 'Pole gestion'.
 * crealead_info_meetings up: Closes #73: Improvement of additionnal info positionning in registration create/edit forms as well as in registration full view mode.
 * crealead_news up: Date field range set to -10/+3 years instead -3/+3.
 * crealead_trainings up: 'Sessions programmées' field label shows up even if field is empty.
 * crealead_trainings up: Closes #77 : Tarif label set inline in teaser view mode.
 * crealead_brands up : Closes #75: Activity sectors tooltip removed from brands search exposed filters.
 * crealead_info_meetings up: Wrong comment of function crealead_info_meetings_update_7001() rewritten.
 * crealead_info_meetings up: bugfix in the new .install file.
 * crealead_info_meetings up: admin/info_meetings_registrations menu link removed from Management menu. View registration_list (Réunions d'information > Inscriptions) updated: Menu entry created.
 * crealead_info_meetings up : Admin menu link 'Inscriptions aux réunions d'information' re-created.
 * Custom theme up: Non bootstrap based footer display altered: secondary menu and navigation region hidden.